<resources>
    <string name="app_name">Note Your Day</string>
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="img_src_opt">
        <item>Take A Photo</item>
        <item>Open From Your Gallery</item>
        <item>Download From Link</item>
    </string-array>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="menu">Menu</string>
    <string name="no_task">No Task</string>
    <string name="welcome">Welcome!</string>
    <string name="add_event_on">Add Event on:</string>
    <string name="Event_on">Event on:</string>
    <string name="enter_task_title">Enter Task Title</string>
    <string name="Enter_Task_description">Enter Task Description</string>
    <string name="Enter_venue">Enter Venue</string>
    <string name="task_title">Task Title</string>
    <string name="Task_description">Task Description</string>
    <string name="venue">Venue</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="all_day">All Day</string>
    <string name="cancel">Cancel</string>
    <string name="enable">Enable</string>
    <string name="yes">Yes</string>
    <string name="Ok" translatable="false">OK</string>
    <string name="create">Create</string>
    <string name="discard_task">Discard Task?</string>
    <string name="discard_task2">Are you sure you want to discard the new task?</string>
    <string name="delete_task">Delete Task?</string>
    <string name="delete_task2">Are you sure you want to delete this task?</string>
    <string name="set_start_time_err">Start time must be before end time</string>
    <string name="set_end_time_err">End time must be after end time</string>
    <string name="no_input_error">Pleas fill in all the form</string>
    <string name="add_successfully">successfully added task</string>
    <string name="set">set</string>
    <string name="max_year">You have exceeded the limited of year</string>
    <string name="min_year">You have reached the minimum amount year</string>
    <string name="delete">Delete</string>
    <string name="location">Location</string>
    <string name="no_gps">Please enable your location services</string>
    <string name="select_address"><u><b>Please select your address</b></u></string>
    <string name="select_img_src"><u><b>Please select your image source</b></u></string>
    <string name="enter_img_url">Please enter image URL</string>
    <string name="url_hint" translatable="false">http://example.com/imgae.jpg</string>
    <string name="backend_urL" translatable="false">http://localhost:8080</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="Setting">Setting</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="wrong_url">Looks like you enter an invalid URL</string>
    <string name="not_image">The link you have enter is not an image</string>
    <string name="conn_off">Your device is not connected to the internet</string>
    <string name="not_conn">Looks like there are something wrong with the internet connection</string>
    <string name="err_500">Looks like something went wrong with the server</string>
    <string name="view_by"><b>View by: </b></string>
    <string name="settings">Settings</string>
    <string name="system_default">System Default</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="Light">Light</string>
    <string name="Dark">Dark</string>
</resources>
