<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context=".view.activity.AddTaskActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingEnd="5dp"
            android:text="@string/add_event_on"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/task_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_calendar_week"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_task_title"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/add_title"
            style="@style/edit_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Enter_Task_description"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/add_description"
            style="@style/edit_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Enter_venue"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/add_value"
            style="@style/edit_text" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_gravity="fill_horizontal"
            android:text="@string/all_day"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:onClick="onAllDayToggled"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />
    </GridLayout>

    <GridLayout
        android:id="@+id/add_task_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.0">



        <TextView
            android:layout_gravity="fill_horizontal"
            android:text="@string/start_time"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/add_start_time"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:onClick="onSetStartTime"
            />

        <TextView
            android:layout_gravity="fill_horizontal"
            android:text="@string/end_time"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/add_end_time"
            android:background="@color/transparent"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:onClick="onSetEndTime"
            />

        <Space android:layout_gravity="fill_horizontal" />

    </GridLayout>

    <GridLayout
        android:padding="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:columnCount="2"
        android:background="@color/gray"
        >
        <TextView

            android:padding="5dp"
            android:text="@string/cancel"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/liteBlue"
            android:layout_margin="1dp"
            android:layout_columnWeight="1"
            android:layout_height="match_parent"
            android:background="@color/dark"
            android:onClick="onBackPressed"
            tools:ignore="RtlCompat" />
        <TextView
            android:layout_margin="1dp"
            android:textColor="@color/liteBlue"
            android:layout_columnWeight="1"
            android:padding="5dp"
            android:layout_height="match_parent"
            android:background="@color/dark"
            android:textSize="25sp"
            android:textAlignment="center"
            android:text="@string/create"
            tools:ignore="RtlCompat"
            android:onClick="onSubmit"/>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>