<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.TaskDetailActivity"
    android:background="@color/backGround">
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingEnd="5dp"
            android:text="@string/Event_on"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/detail_task_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_calendar_week"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_title"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Task_description"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/detail_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/venue"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/detail_venue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickVenue"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/detail_is_all_day"
                android:layout_width="104dp"
                android:layout_height="47dp"
                android:layout_gravity="fill_horizontal"
                android:text="@string/all_day"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                app:layout_constraintVertical_bias="0.02" />

            <GridLayout
                android:id="@+id/detail_show_task_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:rowCount="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                app:layout_constraintVertical_bias="0.0">


                <TextView
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/start_time"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/detail_show_start_time"
                    android:background="@color/transparent"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/end_time"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/detail_show_end_time"
                    android:background="@color/transparent"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <Space android:layout_gravity="fill_horizontal" />

            </GridLayout>

            <ImageView
                android:id="@+id/detail_show_task_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_show_task_time" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:columnCount="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView

            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/dark"
            android:onClick="onBackPressed"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/liteBlue"
            android:textSize="25sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_margin="1dp"
            android:background="@color/dark"
            android:onClick="onDelete"
            android:padding="5dp"
            android:text="@string/delete"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="25sp"
            tools:ignore="RtlCompat" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>